[workspace]
members = [
  "lib/client",
  "programs/*",
]

[workspace.dependencies]
anchor-client = "0.29.0"
anchor-lang = "0.29.0"
anchor-spl = { git = "https://github.com/coral-xyz/anchor", tag = "v0.29.0" }
fixed = { git = "https://github.com/blockworks-foundation/fixed.git", branch = "v1.11.0-borsh0_10-mango" }
pyth-sdk-solana = "0.8.0"
solana-account-decoder = "=2.2.1"
solana-client = "=2.2.1"
solana-logger = "=2.2.1"
solana-program = "=2.2.1"
solana-program-test = "=2.2.1"
solana-rpc = "=2.2.1"
solana-sdk = "=2.2.1"
solana-logger = "=2.2.1"
spl-associated-token-account = "6.0.0"

[profile.release]
codegen-units = 1
lto = "fat"
overflow-checks = true
[profile.release.build-override]
codegen-units = 1
incremental = false
opt-level = 3
