[workspace]
members = [
    "lib/*",
    "programs/*",
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.29.0"
anchor-client = "0.29.0"
anchor-spl = { git = "https://github.com/coral-xyz/anchor", tag = "v0.29.0" }
fixed = { git = "https://github.com/blockworks-foundation/fixed.git", branch = "v1.11.0-borsh0_10-mango" }
pyth-sdk-solana = "0.8.0"
solana-program = "=2.3.0"
solana-sdk = "=2.3.0"
solana-rpc = "=2.3.0"
solana-client = "=2.3.0"
solana-account-decoder = "=2.3.0"
solana-program-test = "=2.3.0"
solana-logger = "=2.3.0"

spl-associated-token-account = "6.0.0"
spl-memo = { git = "https://github.com/solana-labs/solana-program-library", tag = "token-2022-v0.9.0" }
spl-token-2022 = { git = "https://github.com/solana-labs/solana-program-library", tag = "token-2022-v0.9.0" }

[patch.crates-io]
anchor-client = { git = "https://github.com/coral-xyz/anchor", tag = "v0.29.0" }