[package]
description = "Created with Anchor"
edition = "2021"
name = "openbook-v2"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "openbook_v2"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
test-bpf = ["client"]
client = ["solana-sdk", "no-entrypoint"]
enable-gpl = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-program = { workspace = true }
spl-memo = { git = "https://github.com/solana-labs/solana-program-library", tag = "token-2022-v0.9.0" }
spl-token-2022 = { git = "https://github.com/solana-labs/solana-program-library", tag = "token-2022-v0.9.0" }
arrayref = "0.3.9"
bytemuck = { version = "^1.7.2", features = ["derive"] }
num_enum = "0.5.1"
pyth-sdk-solana = { workspace = true }
fixed = { workspace = true }
solana-security-txt = "1.1.1"
switchboard-solana = "0.29.99"
default-env = "0.1.1"
derivative = "2.2.0"
itertools = "0.10.3"

[dev-dependencies]
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
solana-logger = { workspace = true }
spl-token = { version = "^3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { workspace = true }
async-trait = "0.1.52"
base64 = "0.13.0"
log = "0.4.14"
env_logger = "0.9.0"
itertools = "0.10.3"
lazy_static = "1.4.0"
num = "0.4.0"
rand = "0.8.4"